[package]
name = "calmet"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
fitsio = { version = "0.21.7", features = ["array"] }
glob = "0.3.2"
itertools = "0.13.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
ndarray-stats = "0.6.0"
ndrustfft = "0.5.0"
noisy_float = "0.2.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
rayon = "1.10.0"

[profile.release]
opt-level = 3
lto = "thin"

[features]
fitsio-src = ["fitsio/fitsio-src"]
